force-app/main/default/objects/Account_Plan_Partner_Role__c/Account_Plan_Partner_Role__c.object-meta.xml
<CustomObject>
    <label>Account Plan Partner Role</label>
    <nameField>
        <displayFormat>APPR-{0}</displayFormat>
        <label>Account Plan Partner Role Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Partner Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>