force-app/main/default/objects/Account_Plan_Partner_Role__c/fields/AccountPlanRef__c.field-meta.xml
<CustomField>
    <fullName>AccountPlanRef__c</fullName>
    <label>Account Plan</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipName>Account_Plan_Partner_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>