force-app/main/default/objects/Account_Plan_Partner_Role__c/fields/PartnerAccountRef__c.field-meta.xml
<CustomField>
    <fullName>PartnerAccountRef__c</fullName>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Account_Plan_Partner_Roles</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>