force-app/main/default/objects/Account_Plan_Partner_Role__c/fields/PartnerRolePick__c.field-meta.xml
<CustomField>
    <fullName>PartnerRolePick__c</fullName>
    <label>Partner Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Introducer</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Engineering Firm</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>Environmental Consultant</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>