force-app/main/default/objects/Account_Plan_Partner_Role__c/recordTypes/Account_Plan_Competitor_Role_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Account_Plan_Competitor_Role_Record_Type</fullName>
    <active>true</active>
    <label>Account Plan Competitor Role</label>
</RecordType>