force-app/main/default/objects/Account_Plan_Partner_Role__c/recordTypes/Heijmans_Account_Plan_Partner_Role_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Heijmans_Account_Plan_Partner_Role_Record_Type</fullName>
    <active>true</active>
    <label>Account Plan Partner Role</label>
</RecordType>